Add sponsor logo to page

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -42,3 +42,6 @@
 - name: Rosenbaum & Rosenbaum 
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/rosenbaum.png
   site: https://www.rosenbaumnylaw.com/
+- name: Law Offices of Jay S. Knispel
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/knispel.png
+  site: https://jknylaw.com/
