--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.7.2
 
 script:
-- bundle exec jekyll build && bundle exec htmlproofer --check-html --assume-extension --url-ignore "/#.*/,https://twitter.com/StuyPulse" ./_site --file-ignore "/blog/" typhoeus = { :timeout => 60, :verbose => true }
+- bundle exec jekyll build && bundle exec htmlproofer --check-html --assume-extension --url-ignore "/#.*/,https://twitter.com/StuyPulse,https://www.instagram.com/stuypulse/" ./_site --file-ignore "/blog/" typhoeus = { :timeout => 60, :verbose => true }
 - "./_scripts/check-carousel-size.rb"
 - "./_scripts/check-stuypulse-capitalization.sh"
 - "./_scripts/check-image-extensions.sh"
