Add img-link to existing carousel slide

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -3,6 +3,7 @@
 
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/stuysplash2019.jpg
   caption-header: Check out Stuy Splash 2020! A YouTube playlist is available.
+  img-link: https://docs.google.com/document/d/1KNNnll-WENjqaWWsoex1aiRei_i4giS5dEUaoC-IV2c/edit
   read-more-link: https://docs.google.com/document/d/1KNNnll-WENjqaWWsoex1aiRei_i4giS5dEUaoC-IV2c/edit
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/group-2020.jpg
   caption-header: Our 2020 season robot, Edwin!
