Add video recording playlist of 2021 StuySplash

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -3,7 +3,7 @@
 
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/stuysplash2021.jpg
   caption-header: Check out Stuy Splash 2021!
-  img-link: https://drive.google.com/drive/folders/1nrTNPP_3gJfcmTTOtQU3lFotwvUJDjks?usp=sharing
+  img-link: https://www.youtube.com/playlist?list=PLTzhdzF4LCm5OqTtf8pqx5DV-KHXJ2QOU
   read-more-link: /resources/stuysplash2021/
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/group-2020.jpg
   caption-header: Our 2020 season robot, Edwin!
