Add Joe Ricci and Amazon to sponsors page

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -25,6 +25,10 @@
 - name: Bloomberg
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/bloomberg.gif
   site: http://www.bloomberg.com/
+- name: Joe Ricci
+- name: Amazon
+  site: http://tinyurl.com/smilepulse
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/amazon.png
 - name: Law Offices of Jay S. Knispel
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/knispel.png
   site: https://jknylaw.com/
