--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,10 +1,8 @@
 # Carousel items on front page
 # There must be exactly 5 items
 
-- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/stuysplash2021.jpg
-  caption-header: Check out Stuy Splash 2021!
-  img-link: https://www.youtube.com/playlist?list=PLTzhdzF4LCm5OqTtf8pqx5DV-KHXJ2QOU
-  read-more-link: /resources/stuysplash2021/
+- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/spbli-2022.jpg
+  caption-header: StuyPulse with our alliance partners at the SPBLI#2 regional!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/group-2020.jpg
   caption-header: Our 2020 season robot, Edwin!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/palmetto-2020.JPG
