--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -3,11 +3,11 @@
 
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/spbli-2022.jpg
   caption-header: StuyPulse with our alliance partners at the SPBLI#2 regional!
-- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/group-2020.jpg
-  caption-header: Our 2020 season robot, Edwin!
+- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/flr-2022.jpg
+  caption-header: StuyPulse cheering our driveteam on at Finger Lakes Regional Finals!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/palmetto-2020.JPG
   caption-header: StuyPulse at the Palmetto Regional!
 - img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/Alfred.jpg
   caption-header: Our 2019 season robot, Alfred!
 - img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/group-2019.jpg
-  caption-header: StuyPulse with Alfred on Stop Build Day.
+  caption-header: StuyPulse with Alfred on Stop Build Day.`
