Add Excelsior photo to carousel

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -4,9 +4,9 @@
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/spbli-2022.jpg
   caption-header: StuyPulse with our alliance partners at the SPBLI#2 regional!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/flr-2022.jpg
-  caption-header: StuyPulse cheering our driveteam on at Finger Lakes Regional Finals!
-- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/palmetto-2020.JPG
-  caption-header: StuyPulse at the Palmetto Regional!
+  caption-header: StuyPulse cheering our drive team on at Finger Lakes Regional finals!
+- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/excelsior-2022.jpg
+  caption-header: Our robot for the 2022 FRC season, Excelsior!
 - img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/Alfred.jpg
   caption-header: Our 2019 season robot, Alfred!
 - img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/group-2019.jpg
