Add back StuySplash2021 carousel slide

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -7,7 +7,9 @@
   caption-header: StuyPulse cheering our drive team on at Finger Lakes Regional finals!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/excelsior-2022.jpg
   caption-header: Our robot for the 2022 FRC season, Excelsior!
-- img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/Alfred.jpg
-  caption-header: Our 2019 season robot, Alfred!
+- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/stuysplash2021.jpg
+  caption-header: Check out Stuy Splash 2021!
+  img-link: https://www.youtube.com/playlist?list=PLTzhdzF4LCm5OqTtf8pqx5DV-KHXJ2QOU
+  read-more-link: /resources/stuysplash2021/
 - img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/group-2019.jpg
-  caption-header: StuyPulse with Alfred on Stop Build Day.`
+  caption-header: StuyPulse with Alfred on Stop Build Day.
