--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,14 +1,14 @@
 # Carousel items on front page
 # There must be exactly 5 items
 
-- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/spbli-2022.jpg
-  caption-header: StuyPulse with our alliance partners at the SPBLI#2 Regional!
+- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/sbpli-2022.jpg
+  caption-header: StuyPulse with our alliance partners at the SBPLI#2 Regional!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/flr-2022.jpg
   caption-header: StuyPulse cheering our drive team on at the Finger Lakes Regional finals!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/excelsior-2022.jpg
   caption-header: Our robot for the 2022 FRC season, Excelsior!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/stuysplash2021.jpg
-  caption-header: Check out Stuy Splash 2021!
+  caption-header: Check out StuySplash 2021!
   img-link: https://www.youtube.com/playlist?list=PLTzhdzF4LCm5OqTtf8pqx5DV-KHXJ2QOU
   read-more-link: /resources/stuysplash2021/
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/edwin-2021.jpg
