Add nyc and champs images

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -5,6 +5,10 @@
   caption-header: StuyPulse with our alliance partners at the SBPLI#2 Regional!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/flr-2022.jpg
   caption-header: StuyPulse cheering our drive team on at the Finger Lakes Regional finals!
+- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/nyc-2022.jpg
+  caption-header: StuyPulse with our alliance partners at the NYC Regional!
+- img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/champs-2022.jpg
+  caption-header: StuyPulse at FRC Championship in Houston!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/excelsior-2022.jpg
   caption-header: Our robot for the 2022 FRC season, Excelsior!
 - img: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/img/carousel/stuysplash2021.jpg
