--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -32,3 +32,6 @@
 - name: HKM Employment Attorneys
   site: https://hkm.com/new-york/
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/hkm.svg
+- name: Tadchiev Law Firm
+  site: https://tadchievlaw.com
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/Tadchiev.png
