--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -35,3 +35,6 @@
 - name: Tadchiev Law Firm
   site: https://tadchievlaw.com
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/Tadchiev.png
+- name: NASA
+  site: https://www.nasa.gov/
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/nasa.gif
