Add Alec Mori to the sponsor list

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -41,3 +41,4 @@
 - name: Craftsman Ave
   site: https://craftsmanave.com/
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/craftsmanave.png
+- name: Alec Mori
