Add Gene Haas Foundation as sponsor

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -42,3 +42,7 @@
   site: https://craftsmanave.com/
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/craftsmanave.png
 - name: Alec Mori
+- name: Gene Haas Foundation
+  site: https://ghaasfoundation.org/
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/ghaas.png
+
