--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -8,18 +8,12 @@
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/deshaw.png
   site: http://www.deshaw.com/
 - name: Mary Ann Belliveau
-- name: DigitalOcean
-  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/digitalocean.png
-  site: https://digitalocean.com/
 - name: Con Edison
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/conedison.png
   site: http://www.coned.com/
 - name: ABB
   site: https://global.abb/group/en
   logo: https://stuypulse.nyc3.digitaloceanspaces.com/site/sponsorships/img/abb.png
-- name: L3Harris Foundation
-  site: https://www.l3harris.com/
-  logo: https://stuypulse.nyc3.digitaloceanspaces.com/site/sponsorships/img/l3harris.png
 - name: Google
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/google1.png
 - name: Bloomberg
@@ -29,20 +23,12 @@
 - name: Amazon
   site: http://tinyurl.com/smilepulse
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/amazon1.png
-- name: HKM Employment Attorneys
-  site: https://hkm.com/new-york/
-  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/hkm.svg
-- name: Tadchiev Law Firm
-  site: https://tadchievlaw.com
-  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/Tadchiev.png
 - name: NASA
   site: https://www.nasa.gov/
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/nasa.gif
-- name: Craftsman Ave
-  site: https://craftsmanave.com/
-  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/craftsmanave.png
 - name: Alec Mori
 - name: Gene Haas Foundation
   site: https://ghaasfoundation.org/
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/ghaas.png
+- name: Yan Family
 
