--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -31,4 +31,5 @@
   site: https://ghaasfoundation.org/
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/ghaas.png
 - name: Yan Family
+- name: Doan Family
 
