--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -25,7 +25,7 @@
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/amazon1.png
 - name: NASA
   site: https://www.nasa.gov/
-  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/nasa.gif
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/nasa.png
 - name: Alec Mori
 - name: Gene Haas Foundation
   site: https://ghaasfoundation.org/
