Remove Amazon smile link

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -21,7 +21,7 @@
   site: http://www.bloomberg.com/
 - name: Joe Ricci
 - name: Amazon
-  site: http://tinyurl.com/smilepulse
+  site: https://www.amazon.com/
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/amazon1.png
 - name: NASA
   site: https://www.nasa.gov/
