Add Natalie to AC/EC page

--- a/_data/ec.yml
+++ b/_data/ec.yml
@@ -14,7 +14,7 @@ vpob:
 vpse:
     name: Ivan C.
 lab-ops:
-    name: Janna W.
+    name: Janna W. &amp; Natalie S.
 ops:
     name: Allison Z.
 finance:
