--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -32,4 +32,15 @@
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/ghaas.png
 - name: Yan Family
 - name: Doan Family
-
+- name: The Tadchiev Firm, P.C.
+  site: https://www.tadchievlaw.com/
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/tadchiev.png
+- name: BNY Mellon
+  site: https://www.bnymellon.com/
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/bny_mellon.png
+- name: Jiang Family
+- name: Liu Family
+- name: Macquarie
+  site: https://www.macquarie.com/us/en.html
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/macquarie.jpg
+- name: Belliveau Family
